@@ -1,3 +1,8 @@
+07 January 2022 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.html:
+ * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.ts:
+ * clarin-angular/src/app/helpers/annotation.ts: Krippendorff’s alpha.
+
 04 January 2022 Petasis George <petasis@iit.demokritos.gr>:
  * backend-django/clarin_backend/views.py: Added "Content-Disposition" HTTP
  header in "ExportCollectionView".
